# phlox

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html
backend/: README.md  config.yml.example  pyproject.toml
backend/app/: __init__.py  api_keys.py  app_config.py  attachments.py  branding.py  budgets.py  config.py  database.py  guardrails.py  main.py  memory.py  models.py  observability.py  rate_limit.py  runtime_settings.py  schemas.py  skills.py  startup_preflight.py  usage_ledger.py
backend/app/agent/: __init__.py  context.py  events.py  harness.py  permissions.py  registry.py
backend/app/auth/: __init__.py  deps.py  entra.py  security.py  service.py
backend/app/mcp/: __init__.py  manager.py
backend/app/providers/: __init__.py  base.py  bedrock_provider.py  openai_provider.py  registry.py
backend/app/rag/: __init__.py  embed.py  ingest.py  maintenance.py  rerank.py  retrieve.py  store.py
backend/app/routers/: admin_config.py  api_keys.py  assistants.py  attachments.py  auth.py  budgets.py  chat.py  checkpoints.py  conversations.py  documents.py  files.py  gateway.py  (+7 more)
backend/evals/: run_evals.py
backend/tests/: conftest.py  test_admin_config.py  test_api.py  test_assistants.py  test_auth_bootstrap.py  test_budgets.py  test_checkpoints_concurrency.py  test_entra_oidc.py  test_gateway.py  test_guardrails.py  test_harness.py  test_p0_security.py  test_permissions.py  test_sandbox_agentcore.py  test_skills.py  test_subagent.py  test_unit.py  test_web_fetch_ssrf.py  test_workspace_manager.py
(+97 files in other folders)
